--- a/Civil servant salary comparison.ipynb
+++ b/Civil servant salary comparison.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "# load the datasets\n",
@@ -48,12 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-EU income data-\n",
       "   time      geo    sex         age  value_mean  value_median\n",
       "0  2012  Belgium  Total    18 to 54     23865.0       22750.0\n",
       "1  2012  Belgium  Total    18 to 59     23950.0       22754.0\n",
@@ -62,20 +63,35 @@
       "4  2012  Belgium  Total    20 to 64     23833.0       22514.0\n",
       "\n",
       "\n",
+      "-EU civil servants average salary-\n",
       "   time       geo   value\n",
       "0  2014   Belgium  2647.7\n",
       "1  2014  Bulgaria   547.4\n",
       "2  2014   Czechia   948.5\n",
       "3  2014   Denmark  2515.6\n",
-      "4  2014   Germany  3654.3\n"
+      "4  2014   Germany  3654.3\n",
+      "\n",
+      "\n",
+      "-EU civil servants average number of employees-\n",
+      "   time       geo    value\n",
+      "0  2012   Belgium  34697.0\n",
+      "1  2012  Bulgaria  45114.0\n",
+      "2  2012   Czechia  19163.0\n",
+      "3  2012   Denmark   7832.0\n",
+      "4  2012   Germany  13280.0\n"
      ]
     }
    ],
    "source": [
     "# view data\n",
+    "print('-EU income data-')\n",
     "print(df_income.head())\n",
     "print('\\n')\n",
-    "print(df_salary.head())"
+    "print('-EU civil servants average salary-')\n",
+    "print(df_salary.head())\n",
+    "print('\\n')\n",
+    "print('-EU civil servants average number of employees-')\n",
+    "print(df_number.head())"
    ],
    "metadata": {
     "collapsed": false,
@@ -86,9 +102,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# drop the median column from df_income\n",
+    "df_income.drop('value_median', axis=1, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "# group column in df_income to reflect average per year\n",
+    "df_income = df_income.groupby(['time', 'geo'], as_index=False)['value_mean'].mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "# join the tables\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
