--- a/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
+++ b/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
@@ -61,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ],
    "metadata": {
     "collapsed": false,
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "# load the data\n",
@@ -103,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
       "text/plain": "   TIME      GEO  UNIT                     INDIC_IL            CITIZEN    SEX  \\\n0  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n1  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n2  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n3  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n4  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n\n                   AGE   Value  \n0  From 18 to 54 years  23 865  \n1  From 18 to 59 years  23 950  \n2  From 18 to 64 years  23 716  \n3     18 years or over  22 365  \n4  From 20 to 64 years  23 833  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>UNIT</th>\n      <th>INDIC_IL</th>\n      <th>CITIZEN</th>\n      <th>SEX</th>\n      <th>AGE</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 54 years</td>\n      <td>23 865</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 59 years</td>\n      <td>23 950</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 64 years</td>\n      <td>23 716</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>18 years or over</td>\n      <td>22 365</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 20 to 64 years</td>\n      <td>23 833</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# change the column names to lowercase\n",
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# drop the Purchasing power standard (PPS) rows\n",
@@ -213,18 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# transform the values in the \"value\" column\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m:\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39mNaN, regex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;66;03m# change the \":\" to NaN\u001B[39;00m\n\u001B[1;32m      3\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m, regex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;66;03m# remove spaces between the thousand separator\u001B[39;00m\n\u001B[1;32m      4\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfloat64\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'np' is not defined"
-     ]
+     "data": {
+      "text/plain": "0        23865.0\n1        23950.0\n2        23716.0\n3        22365.0\n4        23833.0\n          ...   \n24415        NaN\n24416        NaN\n24417        NaN\n24418        NaN\n24419        NaN\nName: value, Length: 24420, dtype: float64"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# delete the \" equivalized net income\" from the value columns\n",
@@ -259,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# drop null values in the dataset\n",
@@ -274,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "# merge the data to have two columns for mean and median values\n",
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "# simplify the age column\n",
@@ -316,11 +314,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "# change Germany long name to the short one\n",
+    "index_ger = df_income[df_income['geo'].str.contains(\"Germany\")].index # store index values to identify rows that contains Germany\n",
+    "df_income.loc[index_ger, \"geo\"] = 'Germany' # assign the new values"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "# store the new data\n",
-    "df_income.to_csv('/Users/home/Documents/GitHub/Civil_Servant_Salary_EU/modified_data/1. Mean and median income in the EU.csv', index=False)"
+    "df_income.to_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/1. Mean and median income in the EU.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
