--- a/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
+++ b/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Load the data\n",
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "     TIME       GEO                                        LCSTRUCT  \\\n0  2014S2   Belgium  Net remuneration in nominal terms / real terms   \n1  2014S2   Belgium  Net remuneration in nominal terms / real terms   \n2  2014S2  Bulgaria  Net remuneration in nominal terms / real terms   \n3  2014S2  Bulgaria  Net remuneration in nominal terms / real terms   \n4  2014S2   Czechia  Net remuneration in nominal terms / real terms   \n\n           P_ADJ                             UNIT    Value  \n0  Nominal value                             Euro  2 647.7  \n1  Nominal value  Purchasing power standard (PPS)  2 647.7  \n2  Nominal value                             Euro   547.40  \n3  Nominal value  Purchasing power standard (PPS)   993.20  \n4  Nominal value                             Euro   948.50  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>LCSTRUCT</th>\n      <th>P_ADJ</th>\n      <th>UNIT</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014S2</td>\n      <td>Belgium</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014S2</td>\n      <td>Belgium</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Purchasing power standard (PPS)</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014S2</td>\n      <td>Bulgaria</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>547.40</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014S2</td>\n      <td>Bulgaria</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Purchasing power standard (PPS)</td>\n      <td>993.20</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014S2</td>\n      <td>Czechia</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>948.50</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# make column names lower case\n",
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "     time             geo    value\n0    2014         Belgium  2 647.7\n1    2014        Bulgaria   547.40\n2    2014         Czechia   948.50\n3    2014         Denmark  2 515.6\n4    2014         Germany  3 654.3\n..    ...             ...      ...\n219  2021        Slovenia  1 726.0\n220  2021        Slovakia  1 850.0\n221  2021         Finland  3 665.0\n222  2021          Sweden  3 080.0\n223  2021  United Kingdom      NaN\n\n[224 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>geo</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014</td>\n      <td>Belgium</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014</td>\n      <td>Bulgaria</td>\n      <td>547.40</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014</td>\n      <td>Czechia</td>\n      <td>948.50</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014</td>\n      <td>Denmark</td>\n      <td>2 515.6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014</td>\n      <td>Germany</td>\n      <td>3 654.3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>219</th>\n      <td>2021</td>\n      <td>Slovenia</td>\n      <td>1 726.0</td>\n    </tr>\n    <tr>\n      <th>220</th>\n      <td>2021</td>\n      <td>Slovakia</td>\n      <td>1 850.0</td>\n    </tr>\n    <tr>\n      <th>221</th>\n      <td>2021</td>\n      <td>Finland</td>\n      <td>3 665.0</td>\n    </tr>\n    <tr>\n      <th>222</th>\n      <td>2021</td>\n      <td>Sweden</td>\n      <td>3 080.0</td>\n    </tr>\n    <tr>\n      <th>223</th>\n      <td>2021</td>\n      <td>United Kingdom</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>224 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# convert the value columns to float64\n",
@@ -203,7 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "# change Germany long name to the short one\n",
+    "index_ger = df_salary[df_salary['geo'].str.contains(\"Germany\")].index # store index values to identify rows that contains Germany\n",
+    "df_salary.loc[index_ger, \"geo\"] = 'Germany' # assign the new values"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# store the new data\n",
