Adjusted value data
- civil servant salary converted from monthly to yearly

--- a/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
+++ b/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "# load the data\n",
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
       "text/plain": "   TIME      GEO  UNIT                     INDIC_IL            CITIZEN    SEX  \\\n0  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n1  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n2  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n3  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n4  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n\n                   AGE   Value  \n0  From 18 to 54 years  23 865  \n1  From 18 to 59 years  23 950  \n2  From 18 to 64 years  23 716  \n3     18 years or over  22 365  \n4  From 20 to 64 years  23 833  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>UNIT</th>\n      <th>INDIC_IL</th>\n      <th>CITIZEN</th>\n      <th>SEX</th>\n      <th>AGE</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 54 years</td>\n      <td>23 865</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 59 years</td>\n      <td>23 950</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 64 years</td>\n      <td>23 716</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>18 years or over</td>\n      <td>22 365</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 20 to 64 years</td>\n      <td>23 833</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# change the column names to lowercase\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "# drop the Purchasing power standard (PPS) rows\n",
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
       "text/plain": "0        23865.0\n1        23950.0\n2        23716.0\n3        22365.0\n4        23833.0\n          ...   \n24415        NaN\n24416        NaN\n24417        NaN\n24418        NaN\n24419        NaN\nName: value, Length: 24420, dtype: float64"
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "# delete the \" equivalized net income\" from the value columns\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# drop null values in the dataset\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# merge the data to have two columns for mean and median values\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "# simplify the age column\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# change Germany long name to the short one\n",
@@ -330,9 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "outputs": [],
    "source": [
+    "# filter data to reflect the total amount grouped by year and country for mean value only\n",
     "df_income = df_income.query('sex == \"Total\"').groupby(['time', 'geo'], as_index=False)['value_mean'].mean()"
    ],
    "metadata": {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# store the new data\n",
