--- a/Civil servant salary comparison.ipynb
+++ b/Civil servant salary comparison.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "# load the datasets\n",
@@ -48,28 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-EU income data-\n",
-      "   time      geo    sex         age  value_mean  value_median\n",
-      "0  2012  Belgium  Total    18 to 54     23865.0       22750.0\n",
-      "1  2012  Belgium  Total    18 to 59     23950.0       22754.0\n",
-      "2  2012  Belgium  Total    18 to 64     23716.0       22452.0\n",
-      "3  2012  Belgium  Total  18 or over     22365.0       20773.0\n",
-      "4  2012  Belgium  Total    20 to 64     23833.0       22514.0\n",
+      "   time       geo    value_mean\n",
+      "0  2012   Austria  26073.727273\n",
+      "1  2012   Belgium  22347.909091\n",
+      "2  2012  Bulgaria   3363.454545\n",
+      "3  2012   Croatia   6114.272727\n",
+      "4  2012    Cyprus  21527.363636\n",
       "\n",
       "\n",
       "-EU civil servants average salary-\n",
-      "   time       geo   value\n",
-      "0  2014   Belgium  2647.7\n",
-      "1  2014  Bulgaria   547.4\n",
-      "2  2014   Czechia   948.5\n",
-      "3  2014   Denmark  2515.6\n",
-      "4  2014   Germany  3654.3\n",
+      "   time       geo    value\n",
+      "0  2014   Belgium  31772.4\n",
+      "1  2014  Bulgaria   6568.8\n",
+      "2  2014   Czechia  11382.0\n",
+      "3  2014   Denmark  30187.2\n",
+      "4  2014   Germany  43851.6\n",
       "\n",
       "\n",
       "-EU civil servants average number of employees-\n",
@@ -102,22 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "outputs": [],
-   "source": [
-    "# drop the median column from df_income\n",
-    "df_income.drop('value_median', axis=1, inplace=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "# group column in df_income to reflect average per year\n",
@@ -132,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "# join the tables\n",
@@ -148,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "outputs": [
     {
      "data": {
-      "text/plain": "     time          geo    value_mean  value_x   value_y\n0    2014      Austria  28048.939394   2613.0   20566.0\n1    2014      Belgium  24173.848485   2647.7   31297.0\n2    2014     Bulgaria   4058.848485    547.4   34718.0\n3    2014      Croatia   5947.666667      0.0   11537.0\n4    2014       Cyprus  19982.515152   2152.8    8992.0\n..    ...          ...           ...      ...       ...\n204  2021  Netherlands  31003.606061   2927.0  135437.0\n205  2021      Romania   5534.636364    907.0     436.0\n206  2021     Slovenia  16777.757576   1726.0   20428.0\n207  2021        Spain  19459.393939   2909.0   37685.0\n208  2021       Sweden  29611.545455   3080.0   69256.0\n\n[209 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>geo</th>\n      <th>value_mean</th>\n      <th>value_x</th>\n      <th>value_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014</td>\n      <td>Austria</td>\n      <td>28048.939394</td>\n      <td>2613.0</td>\n      <td>20566.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014</td>\n      <td>Belgium</td>\n      <td>24173.848485</td>\n      <td>2647.7</td>\n      <td>31297.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014</td>\n      <td>Bulgaria</td>\n      <td>4058.848485</td>\n      <td>547.4</td>\n      <td>34718.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014</td>\n      <td>Croatia</td>\n      <td>5947.666667</td>\n      <td>0.0</td>\n      <td>11537.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014</td>\n      <td>Cyprus</td>\n      <td>19982.515152</td>\n      <td>2152.8</td>\n      <td>8992.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>2021</td>\n      <td>Netherlands</td>\n      <td>31003.606061</td>\n      <td>2927.0</td>\n      <td>135437.0</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>2021</td>\n      <td>Romania</td>\n      <td>5534.636364</td>\n      <td>907.0</td>\n      <td>436.0</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>2021</td>\n      <td>Slovenia</td>\n      <td>16777.757576</td>\n      <td>1726.0</td>\n      <td>20428.0</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>2021</td>\n      <td>Spain</td>\n      <td>19459.393939</td>\n      <td>2909.0</td>\n      <td>37685.0</td>\n    </tr>\n    <tr>\n      <th>208</th>\n      <td>2021</td>\n      <td>Sweden</td>\n      <td>29611.545455</td>\n      <td>3080.0</td>\n      <td>69256.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>209 rows × 5 columns</p>\n</div>"
+      "text/plain": "     time          geo    value_mean  value_x   value_y\n0    2014      Austria  28018.454545  31356.0   20566.0\n1    2014      Belgium  24156.909091  31772.4   31297.0\n2    2014     Bulgaria   4052.909091   6568.8   34718.0\n3    2014      Croatia   5940.636364      0.0   11537.0\n4    2014       Cyprus  19964.454545  25833.6    8992.0\n..    ...          ...           ...      ...       ...\n204  2021  Netherlands  30993.000000  35124.0  135437.0\n205  2021      Romania   5526.818182  10884.0     436.0\n206  2021     Slovenia  16765.454545  20712.0   20428.0\n207  2021        Spain  19446.272727  34908.0   37685.0\n208  2021       Sweden  29594.090909  36960.0   69256.0\n\n[209 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>geo</th>\n      <th>value_mean</th>\n      <th>value_x</th>\n      <th>value_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014</td>\n      <td>Austria</td>\n      <td>28018.454545</td>\n      <td>31356.0</td>\n      <td>20566.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014</td>\n      <td>Belgium</td>\n      <td>24156.909091</td>\n      <td>31772.4</td>\n      <td>31297.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014</td>\n      <td>Bulgaria</td>\n      <td>4052.909091</td>\n      <td>6568.8</td>\n      <td>34718.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014</td>\n      <td>Croatia</td>\n      <td>5940.636364</td>\n      <td>0.0</td>\n      <td>11537.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014</td>\n      <td>Cyprus</td>\n      <td>19964.454545</td>\n      <td>25833.6</td>\n      <td>8992.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>2021</td>\n      <td>Netherlands</td>\n      <td>30993.000000</td>\n      <td>35124.0</td>\n      <td>135437.0</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>2021</td>\n      <td>Romania</td>\n      <td>5526.818182</td>\n      <td>10884.0</td>\n      <td>436.0</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>2021</td>\n      <td>Slovenia</td>\n      <td>16765.454545</td>\n      <td>20712.0</td>\n      <td>20428.0</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>2021</td>\n      <td>Spain</td>\n      <td>19446.272727</td>\n      <td>34908.0</td>\n      <td>37685.0</td>\n    </tr>\n    <tr>\n      <th>208</th>\n      <td>2021</td>\n      <td>Sweden</td>\n      <td>29594.090909</td>\n      <td>36960.0</td>\n      <td>69256.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>209 rows × 5 columns</p>\n</div>"
      },
-     "execution_count": 51,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "outputs": [],
    "source": [],
    "metadata": {
