--- a/Preliminary analysis/3.1 EU Number of civil servants - Data wrangling.ipynb
+++ b/Preliminary analysis/3.1 EU Number of civil servants - Data wrangling.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# load the data\n",
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "     TIME                                               GEO STATINFO    UNIT  \\\n0  2012S2                                           Belgium    Total  Number   \n1  2012S2                                          Bulgaria    Total  Number   \n2  2012S2                                           Czechia    Total  Number   \n3  2012S2                                           Denmark    Total  Number   \n4  2012S2  Germany (until 1990 former territory of the FRG)    Total  Number   \n\n    Value  \n0  34,697  \n1  45,114  \n2  19,163  \n3   7,832  \n4  13,280  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>STATINFO</th>\n      <th>UNIT</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012S2</td>\n      <td>Belgium</td>\n      <td>Total</td>\n      <td>Number</td>\n      <td>34,697</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012S2</td>\n      <td>Bulgaria</td>\n      <td>Total</td>\n      <td>Number</td>\n      <td>45,114</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012S2</td>\n      <td>Czechia</td>\n      <td>Total</td>\n      <td>Number</td>\n      <td>19,163</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012S2</td>\n      <td>Denmark</td>\n      <td>Total</td>\n      <td>Number</td>\n      <td>7,832</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012S2</td>\n      <td>Germany (until 1990 former territory of the FRG)</td>\n      <td>Total</td>\n      <td>Number</td>\n      <td>13,280</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# drop the redundant columns\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# remove S2 from the year values in TIME column\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# convert Value column to integer\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# change Germany long name to the short one\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# set column names as lower case\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -365,6 +365,21 @@
     "    print(column + ':')\n",
     "    uniq_val(column)\n",
     "    print('\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# change the value_mean columns name to income\n",
+    "df_number.rename(columns={'value': 'employees'}, inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
