--- a/Civil servant salary comparison_Final_Data wrangling.ipynb
+++ b/Civil servant salary comparison_Final_Data wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "outputs": [],
    "source": [
     "# load the datasets\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "outputs": [
     {
      "name": "stdout",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "outputs": [],
    "source": [
     "# group column in df_income to reflect average per year\n",
@@ -117,10 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "outputs": [],
    "source": [
-    "# join the tables\n",
+    "# join all three data sets\n",
     "df_first = pd.merge(df_income, df_salary, on =['time', 'geo'])\n",
     "df = pd.merge(df_first, df_number, on =['time', 'geo'])"
    ],
@@ -133,20 +133,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "outputs": [
     {
-     "data": {
-      "text/plain": "     time          geo        income   salary  employees\n0    2014      Austria  28018.454545  31356.0    20566.0\n1    2014      Belgium  24156.909091  31772.4    31297.0\n2    2014     Bulgaria   4052.909091   6568.8    34718.0\n3    2014      Croatia   5940.636364      0.0    11537.0\n4    2014       Cyprus  19964.454545  25833.6     8992.0\n..    ...          ...           ...      ...        ...\n204  2021  Netherlands  30993.000000  35124.0   135437.0\n205  2021      Romania   5526.818182  10884.0      436.0\n206  2021     Slovenia  16765.454545  20712.0    20428.0\n207  2021        Spain  19446.272727  34908.0    37685.0\n208  2021       Sweden  29594.090909  36960.0    69256.0\n\n[209 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>geo</th>\n      <th>income</th>\n      <th>salary</th>\n      <th>employees</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014</td>\n      <td>Austria</td>\n      <td>28018.454545</td>\n      <td>31356.0</td>\n      <td>20566.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014</td>\n      <td>Belgium</td>\n      <td>24156.909091</td>\n      <td>31772.4</td>\n      <td>31297.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014</td>\n      <td>Bulgaria</td>\n      <td>4052.909091</td>\n      <td>6568.8</td>\n      <td>34718.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014</td>\n      <td>Croatia</td>\n      <td>5940.636364</td>\n      <td>0.0</td>\n      <td>11537.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014</td>\n      <td>Cyprus</td>\n      <td>19964.454545</td>\n      <td>25833.6</td>\n      <td>8992.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>2021</td>\n      <td>Netherlands</td>\n      <td>30993.000000</td>\n      <td>35124.0</td>\n      <td>135437.0</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>2021</td>\n      <td>Romania</td>\n      <td>5526.818182</td>\n      <td>10884.0</td>\n      <td>436.0</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>2021</td>\n      <td>Slovenia</td>\n      <td>16765.454545</td>\n      <td>20712.0</td>\n      <td>20428.0</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>2021</td>\n      <td>Spain</td>\n      <td>19446.272727</td>\n      <td>34908.0</td>\n      <td>37685.0</td>\n    </tr>\n    <tr>\n      <th>208</th>\n      <td>2021</td>\n      <td>Sweden</td>\n      <td>29594.090909</td>\n      <td>36960.0</td>\n      <td>69256.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>209 rows × 5 columns</p>\n</div>"
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overview of the final table\n",
+      "     time          geo        income   salary  employees\n",
+      "0    2014      Austria  28018.454545  31356.0    20566.0\n",
+      "1    2014      Belgium  24156.909091  31772.4    31297.0\n",
+      "2    2014     Bulgaria   4052.909091   6568.8    34718.0\n",
+      "3    2014      Croatia   5940.636364      0.0    11537.0\n",
+      "4    2014       Cyprus  19964.454545  25833.6     8992.0\n",
+      "..    ...          ...           ...      ...        ...\n",
+      "204  2021  Netherlands  30993.000000  35124.0   135437.0\n",
+      "205  2021      Romania   5526.818182  10884.0      436.0\n",
+      "206  2021     Slovenia  16765.454545  20712.0    20428.0\n",
+      "207  2021        Spain  19446.272727  34908.0    37685.0\n",
+      "208  2021       Sweden  29594.090909  36960.0    69256.0\n",
+      "\n",
+      "[209 rows x 5 columns]\n",
+      "\n",
+      "\n",
+      "In-deph view of the data\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 209 entries, 0 to 208\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   time       209 non-null    int64  \n",
+      " 1   geo        209 non-null    object \n",
+      " 2   income     209 non-null    float64\n",
+      " 3   salary     209 non-null    float64\n",
+      " 4   employees  207 non-null    float64\n",
+      "dtypes: float64(3), int64(1), object(1)\n",
+      "memory usage: 9.8+ KB\n",
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "df"
+    "# final check of the data\n",
+    "print('Overview of the final table')\n",
+    "print(df)\n",
+    "print('\\n')\n",
+    "print('In-deph view of the data')\n",
+    "print(df.info())"
    ],
    "metadata": {
     "collapsed": false,
@@ -157,9 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "outputs": [],
-   "source": [],
+   "source": [
+    "df.to_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/Final data/Civil Servants Remuneration in the EU_Final.csv')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
